added surroundingIdealTriangle(self) made coloradjustments added new images

--- a/examples/halfplane.ipynb
+++ b/examples/halfplane.ipynb
@@ -2,34 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PList = [Ideal(0.707, -0.708), Point(-0.86, 0.407), Ideal(-0.098, 0.995)]\n",
-      "k = 1\n",
-      "Tri is CW\n",
+      "PList = [Point(-0.197, 0.872), Ideal(-0.3, -0.954), Ideal(0.139, -0.99)]\n",
+      "k = 0\n",
+      "Tri is CCW\n",
       "Tri is not covered for delta = 0.3\n"
      ]
     },
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"416.66666666666663\" viewBox=\"-4.5 -4.7 9 5\">\n<defs>\n</defs>\n<rect x=\"-10\" y=\"-10\" width=\"20\" height=\"10\" stroke=\"#cc6500\" stroke-width=\"0.01\" fill=\"#ff7f00\" />\n<path d=\"M0.4138702837718008,5.55111512312578e-17 A0.9973933656909812,0.9973933656909812,0,0,0,-1.5770979860091177,-0.08719194852195769 A9.433342320164629,9.433342320164629,0,0,0,-20.443379662149802,1.3215117049603821e-14 A10.428624972960844,10.428624972960844,0,0,1,0.4138702837718,-7.771561172376102e-16 Z\" stroke=\"#793e82\" stroke-width=\"0.005\" fill=\"#377eb8\" fill-opacity=\"1\" />\n<path d=\"M-1.6030620717702297,-0.08558992720070327 A0.026551717750070463,0.026551717750070463,0,0,0,-1.5524234875579217,-0.08133883648290587 A1.0426136988933923,1.0426136988933923,0,0,1,0.4138702837717999,-6.661338147750939e-16 A10.901443333641945,10.901443333641945,0,1,0,-20.44337966214979,-1.305622276959184e-13 A10.901443333641977,10.901443333641977,0,0,1,-0.02236847969672162,-1.1824465199044094 A1.0426136988933932,1.0426136988933932,0,0,0,-1.6030620717702293,-0.08558992720070224 Z\" stroke=\"#e94749\" stroke-width=\"0.005\" fill=\"#e41a1c\" fill-opacity=\"0.75\" />\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"750\" height=\"416.66666666666663\" viewBox=\"-4.5 -4.9 9 5\">\n<defs>\n<linearGradient x1=\"0\" y1=\"0\" x2=\"0\" y2=\"-10\" gradientUnits=\"userSpaceOnUse\" id=\"d0\">\n<stop offset=\"0\" stop-color=\"#ff9832\" stop-opacity=\"1\" />\n<stop offset=\"0.2\" stop-color=\"#ff7f00\" stop-opacity=\"1\" />\n</linearGradient>\n<linearGradient x1=\"0\" y1=\"0\" x2=\"0\" y2=\"-10\" gradientUnits=\"userSpaceOnUse\" id=\"d1\">\n<stop offset=\"0\" stop-color=\"#2c6493\" stop-opacity=\"1\" />\n<stop offset=\"0.2\" stop-color=\"#377eb8\" stop-opacity=\"1\" />\n</linearGradient>\n<linearGradient x1=\"0\" y1=\"0\" x2=\"0\" y2=\"-10\" gradientUnits=\"userSpaceOnUse\" id=\"d2\">\n<stop offset=\"0\" stop-color=\"#e41a1c\" stop-opacity=\"0.75\" />\n<stop offset=\"0.2\" stop-color=\"#e94749\" stop-opacity=\"0.5\" />\n</linearGradient>\n</defs>\n<rect x=\"-10\" y=\"-10\" width=\"20\" height=\"10\" stroke=\"#cc6500\" stroke-width=\"0.01\" fill=\"url(#d0)\" />\n<path d=\"M-7.1557248556339825,-3.6432625051891714 A4.448838267976464,4.448838267976464,0,0,1,-0.15369246011950732,-2.7755575615628914e-17 A0.11172153256872391,0.11172153256872391,0,0,1,0.06975060501794109,-1.3010426069826053e-17 A4.531249027887252,4.531249027887252,0,0,0,-7.155724855634226,-3.6432625051895227 Z\" stroke=\"black\" stroke-opacity=\"0.5\" stroke-width=\"0.005\" fill=\"url(#d1)\" />\n<path d=\"M-6.644429502551461,-2.8238358280441833 A1.1094473671898717,1.1094473671898717,0,0,1,-7.979795215763597,-4.551262579905184 A4.736689125959242,4.736689125959242,0,0,1,0.06975060501793351,-1.5543122344752192e-15 A0.11678682085158897,0.11678682085158897,0,0,0,-0.15369246011950682,1.3183898417423734e-16 A0.11678682085158901,0.11678682085158901,0,0,1,0.029258212382511035,-0.1265718447565676 A4.736689125959627,4.736689125959627,0,0,0,-6.644429502551461,-2.8238358280441838 Z\" stroke=\"black\" stroke-opacity=\"0.5\" stroke-width=\"0.005\" fill=\"url(#d2)\" />\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x18bd71a7370>"
+       "<drawSvg.drawing.Drawing at 0x2789a908c40>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import random\n",
-    "import drawSvg as draw\n",
+    "import drawSvg\n",
     "from drawSvg import Drawing\n",
     "from hyperbolic.poincare.shapes import *\n",
     "import sys\n",
@@ -38,16 +38,29 @@
     "from deltaNeigbourhood import *\n",
     "from Triangle import *\n",
     "\n",
-    "backgroundStyle = dict(stroke='#cc6500', stroke_width=0.01, fill='#ff7f00')\n",
-    "polyStyle1 = dict(stroke='#793e82', stroke_width=0.005,  fill='#377eb8', fill_opacity=1)\n",
-    "polyStyle2 = dict(stroke='#e94749', stroke_width=0.005, fill='#e41a1c', fill_opacity=0.75)\n",
+    "backcolor = drawSvg.LinearGradient(0,0,0,10)\n",
+    "backcolor.addStop(0, '#ff9832', opacity=1)\n",
+    "backcolor.addStop(0.2, '#ff7f00', opacity=1)\n",
+    "\n",
+    "polycolor1 = drawSvg.LinearGradient(0,0,0,10)\n",
+    "polycolor1.addStop(0, '#2c6493', opacity=1)\n",
+    "polycolor1.addStop(0.2, '#377eb8', opacity=1)\n",
+    "\n",
+    "polycolor2 = drawSvg.LinearGradient(0,0,0,10)\n",
+    "polycolor2.addStop(0, '#e41a1c', opacity=0.75)\n",
+    "polycolor2.addStop(0.2, '#e94749', opacity=0.5)\n",
+    "\n",
+    "backgroundStyle = dict(stroke='#cc6500', stroke_width=0.01, fill=backcolor)\n",
+    "polyStyle1 = dict(stroke='black', stroke_opacity=0.5, stroke_width=0.005,  fill=polycolor1)\n",
+    "polyStyle2 = dict(stroke='black', stroke_opacity=0.5, stroke_width=0.005, fill=polycolor2)\n",
     "lineStyle1 = dict(hwidth=0.02, fill='#984ea3')\n",
-    "lineStyle2 = dict(hwidth=0.02, fill='#4daf4a')\n",
+    "lineStyle2 = dict(hwidth=0.02, fill='yellow')\n",
+    "\n",
+    "\n",
     "\n",
     "halfplane= Transform.diskToHalf()\n",
-    "\n",
-    "d = Drawing(9, 5, origin=(-9/2, -0.3))\n",
-    "d.append(draw.Rectangle(-10, 0, 20, 10, **backgroundStyle))\n",
+    "d = drawSvg.Drawing(9, 5, origin=(-9/2, -0.1))\n",
+    "d.append(drawSvg.Rectangle(-10,0, 20, 10, **backgroundStyle))\n",
     "d.setRenderSize(w=750)\n",
     "\n",
     "\n",
