--- a/examples/widget.ipynb
+++ b/examples/widget.ipynb
@@ -1,22 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "ca08a0c6",
-   "metadata": {},
-   "source": [
-    "original code found on https://pypi.org/project/drawSvg/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2e77d643",
-   "metadata": {},
-   "source": [
-    "new code specific for our usecase"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "388d6c6d",
@@ -25,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3b5e0da0e3b4f34a9113564d9011876",
+       "model_id": "53c60e52676b4685bfc11bbe54052f12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,7 +22,7 @@
     }
    ],
    "source": [
-    "import drawSvg as draw\n",
+    "import drawSvg\n",
     "from drawSvg.widgets import DrawingWidget\n",
     "import sys\n",
     "sys.path.insert(0,\"..\")\n",
@@ -47,30 +31,47 @@
     "from Triangle import *\n",
     "from deltaNeigbourhood import *\n",
     "\n",
-    "backgroundStyle = dict(stroke='#cc6500', stroke_width=0.01, fill='#ff7f00')\n",
-    "polyStyle1 = dict(stroke='#793e82', stroke_width=0.005,  fill='#377eb8', fill_opacity=1)\n",
-    "polyStyle2 = dict(stroke='#e94749', stroke_width=0.005, fill='#e41a1c', fill_opacity=0.75)\n",
+    "\n",
+    "backcolor = drawSvg.RadialGradient(0,0,1)\n",
+    "backcolor.addStop(0, '#ff9832', opacity=1)\n",
+    "backcolor.addStop(1, '#ff7f00', opacity=1)\n",
+    "\n",
+    "polycolor1 = drawSvg.RadialGradient(0,0,1)\n",
+    "polycolor1.addStop(0, '#2c6493', opacity=1)\n",
+    "polycolor1.addStop(1, '#377eb8', opacity=1)\n",
+    "\n",
+    "polycolor2 = drawSvg.RadialGradient(0,0,1)\n",
+    "polycolor2.addStop(0, '#e41a1c', opacity=0.75)\n",
+    "polycolor2.addStop(1, '#e94749', opacity=0.5)\n",
+    "\n",
+    "backgroundStyle = dict(stroke='#cc6500', stroke_width=0.01, fill=backcolor)\n",
+    "polyStyle1 = dict(stroke='black', stroke_opacity=0.5, stroke_width=0.005,  fill=polycolor1)\n",
+    "polyStyle2 = dict(stroke='black', stroke_opacity=0.5, stroke_width=0.005, fill=polycolor2)\n",
     "lineStyle1 = dict(hwidth=0.04, fill='#984ea3')\n",
+    "lineStyle2 = dict(hwidth=0.04, fill='yellow')\n",
     "pointStyle1 = dict(hradius=0.02, fill='#984ea3')\n",
-    "lineStyle2 = dict(hwidth=0.04, fill='#4daf4a')\n",
-    "pointStyle2 = dict(hradius=0.02, fill='#4daf4a')\n",
+    "pointStyle2 = dict(hradius=0.02, fill='yellow')\n",
     "\n",
     "delta=0.3\n",
-    "PList=[]\n",
     "\n",
-    "clicks=0\n",
-    "approximated=False\n",
     "\n",
     "# Create drawing\n",
-    "d = draw.Drawing(2.1, 2.5, origin='center')\n",
+    "d = drawSvg.Drawing(2.1, 2.5, origin='center')\n",
     "d.setRenderSize(500)\n",
-    "d.append(draw.Circle(0, 0, 1, **backgroundStyle))\n",
-    "g=draw.Group()\n",
+    "d.append(drawSvg.Circle(0, 0, 1, **backgroundStyle))\n",
+    "g=drawSvg.Group()\n",
     "d.append(g)\n",
     "\n",
+    "#setup for widegt\n",
+    "PList=[]\n",
+    "clicks=0\n",
+    "approximated=False\n",
+    "text='click inside the circle to add a point'\n",
+    "deltatext='delta is set to = {}'.format(delta)\n",
+    "\n",
     "def drawText(text1, text2):\n",
-    "    g.draw(draw.Text(text1, 0.1, 0, 1.1, center=0.7))\n",
-    "    g.draw(draw.Text(text2, 0.1, 0, 1.2, center=0.7))\n",
+    "    g.draw(drawSvg.Text(text1, 0.1, 0, 1.1, center=0.7))\n",
+    "    g.draw(drawSvg.Text(text2, 0.1, 0, 1.2, center=0.7))\n",
     "    \n",
     "\n",
     "def drawLines(points):\n",
@@ -92,15 +93,13 @@
     "    g.draw(Tri,**polyStyle1)\n",
     "    g.draw(deltaNbh(Tri, offset, edgeNum), **polyStyle2)\n",
     "\n",
-    "text='click inside the circle to add a point'\n",
-    "deltatext='delta is set to = {}'.format(delta)\n",
-    "    \n",
+    "\n",
     "        \n",
     "widget = DrawingWidget(d)\n",
     "@widget.mousedown\n",
     "\n",
     "def mousedown(widget, x, y, info):\n",
-    "    global clicks, approximated\n",
+    "    global clicks, approximated, text, deltatext\n",
     "    if (x**2 + y**2) ** 0.5 + 2e-10 < 1:\n",
     "        clicks+=1\n",
     "        if clicks<3:\n",
@@ -173,20 +172,6 @@
     "\n",
     "widget\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
