--- a/test_code_drawing.ipynb
+++ b/test_code_drawing.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "id": "a719b7da",
    "metadata": {},
    "outputs": [
@@ -34,65 +34,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PList = [Point(-0.142, 0.127), Ideal(0.667, -0.745), Point(0.407, -0.813)]\n",
+      "PList = [Point(-0.01, 0.868), Point(-0.311, -0.079), Ideal(0.863, 0.506)]\n",
       "k = 2\n",
-      "Tri is CW\n",
-      "Tri is not covered for delta = 0.3\n"
+      "Tri is CCW\n",
+      "Tri is delta-slim for delta = 0.8289549960754812\n"
      ]
     },
     {
      "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.05 -1.05 2.1 2.1\">\n<defs>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" stroke=\"#cc6500\" stroke-width=\"0.01\" fill=\"#ff7f00\" />\n<path d=\"M-0.1421871590719057,-0.12663930833092607 A33.069930281735836,33.069930281735836,0,0,1,0.667316310938542,0.7447744230002584 A0.15135747663591229,0.15135747663591229,0,0,0,0.40685817166811866,0.8128437319757725 A9.875128347748236,9.875128347748236,0,0,0,-0.14218715907190216,-0.12663930833093495 Z\" stroke=\"#793e82\" stroke-width=\"0.005\" fill=\"#377eb8\" fill-opacity=\"1\" />\n<path d=\"M0.3789113874123121,0.8098956807672033 A0.026351633931458555,0.026351633931458555,0,0,0,0.42940740841348124,0.820209457274931 A0.16586474173420673,0.16586474173420673,0,0,1,0.6673163109385438,0.7447744230002608 A3.1226576460449356,3.1226576460449356,0,0,0,-0.04151554156223858,-0.22923979944333484 A0.14360265714331985,0.14360265714331985,0,0,0,-0.2480336736298461,-0.03030774376008738 A3.8111907454030725,3.8111907454030725,0,0,0,0.529581998616123,0.6572647962251215 A0.15124853929572882,0.15124853929572882,0,0,0,0.3789113874123121,0.8098956807672033 Z\" stroke=\"#e94749\" stroke-width=\"0.005\" fill=\"#e41a1c\" fill-opacity=\"0.75\" />\n<path d=\"M-0.7110982911880546,-0.7030926114456275 A3.036937746459401,3.036937746459401,0,0,1,0.6673163109384892,0.7447744230003126 A3.2139325336806235,3.2139325336806235,0,0,0,-0.7110982911880499,-0.7030926114456255 Z\" fill=\"#984ea3\" />\n<path d=\"M0.6673163109385449,0.7447744230002606 A0.1666330206177096,0.1666330206177096,0,0,0,0.4170207847917698,0.9088969496327163 A0.16511636658748957,0.16511636658748957,0,0,1,0.667316310938545,0.7447744230002608 Z\" fill=\"#984ea3\" />\n<path d=\"M0.44801015661926247,0.8940284668655614 A4.9055474705448985,4.9055474705448985,0,0,1,-0.6181439818966261,-0.7860648940418269 A5.405867095290933,5.405867095290933,0,0,0,0.44801015661926336,0.8940284668655614 Z\" fill=\"#984ea3\" />\n<path d=\"M-0.7110982911879513,-0.7030926114457305 A3.9506278021408288,3.9506278021408288,0,0,0,0.6673163109385962,0.7447744230002149 A3.681951058492849,3.681951058492849,0,0,1,-0.7110982911879522,-0.7030926114457308 Z\" fill=\"#4daf4a\" />\n<path d=\"M0.6673163109385443,0.7447744230002613 A0.15104361067708183,0.15104361067708183,0,1,0,0.4170207847917702,0.9088969496327161 A0.15146728563523948,0.15146728563523948,0,1,1,0.6673163109385443,0.7447744230002613 Z\" fill=\"#4daf4a\" />\n<path d=\"M0.4480101566192545,0.8940284668655645 A2.636536848575819,2.636536848575819,0,0,0,-0.6181439818966306,-0.7860648940418202 A2.518743553207572,2.518743553207572,0,0,1,0.4480101566192549,0.8940284668655636 Z\" fill=\"#4daf4a\" />\n</svg>",
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.05 -1.05 2.1 2.1\">\n<defs>\n<radialGradient cx=\"0\" cy=\"0\" r=\"1\" gradientUnits=\"userSpaceOnUse\" id=\"d0\">\n<stop offset=\"0\" stop-color=\"#ff9832\" stop-opacity=\"1\" />\n<stop offset=\"1\" stop-color=\"#ff7f00\" stop-opacity=\"1\" />\n</radialGradient>\n<radialGradient cx=\"0\" cy=\"0\" r=\"1\" gradientUnits=\"userSpaceOnUse\" id=\"d1\">\n<stop offset=\"0\" stop-color=\"#2c6493\" stop-opacity=\"1\" />\n<stop offset=\"1\" stop-color=\"#377eb8\" stop-opacity=\"1\" />\n</radialGradient>\n<radialGradient cx=\"0\" cy=\"0\" r=\"1\" gradientUnits=\"userSpaceOnUse\" id=\"d2\">\n<stop offset=\"0\" stop-color=\"#e41a1c\" stop-opacity=\"0.75\" />\n<stop offset=\"1\" stop-color=\"#e94749\" stop-opacity=\"0.5\" />\n</radialGradient>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" stroke=\"#cc6500\" stroke-width=\"0.01\" fill=\"url(#d0)\" />\n<path d=\"M-0.009771879283675844,-0.8680163782818222 A2.0152591534200535,2.0152591534200535,0,0,1,-0.31123776124628444,0.07863575241785858 A9.58724754724275,9.58724754724275,0,0,0,0.8625047125595504,-0.5060490300480431 A0.5917403879825922,0.5917403879825922,0,0,1,-0.00977187928367751,-0.8680163782818217 Z\" stroke=\"black\" stroke-opacity=\"0.5\" stroke-width=\"0.005\" fill=\"url(#d1)\" />\n<path d=\"M-0.017362190967990188,-0.9998492658019963 A1.633115377080332,1.633115377080332,0,0,1,-0.8826660474268118,0.4700006901270777 A48.411959158524105,48.411959158524105,0,0,0,0.8625047125595486,-0.5060490300480467 A0.58428042979548,0.58428042979548,0,0,1,-0.01736219096799041,-0.9998492658019964 Z\" stroke=\"black\" stroke-opacity=\"0.5\" stroke-width=\"0.005\" fill=\"url(#d2)\" />\n<circle cx=\"-0.009771879283675844\" cy=\"-0.8680163782818222\" r=\"0.03\" fill=\"yellow\" />\n<text x=\"-0.009771879283675844\" y=\"-0.8680163782818222\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"-0.31123776124627955\" cy=\"0.07863575241786158\" r=\"0.03\" fill=\"yellow\" />\n<text x=\"-0.31123776124627955\" y=\"0.07863575241786158\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"0.8625047125595515\" cy=\"-0.5060490300480432\" r=\"0.03\" fill=\"yellow\" />\n<text x=\"0.8625047125595515\" y=\"-0.5060490300480432\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n<circle cx=\"-0.0173621909679901\" cy=\"-0.9998492658019963\" r=\"0.03\" fill=\"lightblue\" />\n<text x=\"-0.0173621909679901\" y=\"-0.9998492658019963\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"-0.8826660474268134\" cy=\"0.47000069012707446\" r=\"0.03\" fill=\"lightblue\" />\n<text x=\"-0.8826660474268134\" y=\"0.47000069012707446\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"0.8625047125595493\" cy=\"-0.506049030048047\" r=\"0.03\" fill=\"lightblue\" />\n<text x=\"0.8625047125595493\" y=\"-0.506049030048047\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n<path d=\"M-0.006276380070706855,-0.9999803033326244 A1.975546864654237,1.975546864654237,0,0,1,-0.7925334273887463,0.6098284729917474 A2.056810673419911,2.056810673419911,0,0,0,-0.006276380070706633,-0.9999803033326246 Z\" fill=\"yellow\" />\n<text x=\"-0.10125493331116275\" y=\"-0.3758219040968218\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<path d=\"M-0.9483702684522108,0.3171653100764491 A10.604415414999186,10.604415414999186,0,0,0,0.8625047125595549,-0.5060490300480449 A8.74893123829634,8.74893123829634,0,0,1,-0.9483702684521975,0.317165310076442 Z\" fill=\"yellow\" />\n<text x=\"0.28564156408350083\" y=\"-0.1936156105884308\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<path d=\"M0.862504712559552,-0.5060490300480426 A0.5882887749498762,0.5882887749498762,0,0,1,-0.02844586783716352,-0.9995953344243812 A0.5952926208227134,0.5952926208227134,0,0,0,0.862504712559552,-0.5060490300480427 Z\" fill=\"yellow\" />\n<text x=\"0.33625366020765995\" y=\"-0.4698770727408659\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n</svg>",
       "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x1af6fd3b970>"
+       "<drawSvg.drawing.Drawing at 0x1d6ecf46fa0>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import random\n",
-    "import drawSvg as draw\n",
+    "import drawSvg \n",
     "from constructions import *\n",
     "from deltaNeigbourhood import *\n",
+    "from hyperbolic.euclid.shapes import Circle as ECircle\n",
     "from hyperbolic.poincare.shapes import *\n",
     "from Triangle import *\n",
     "\n",
-    "backgroundStyle = dict(stroke='#cc6500', stroke_width=0.01, fill='#ff7f00')\n",
-    "polyStyle1 = dict(stroke='#793e82', stroke_width=0.005,  fill='#377eb8', fill_opacity=1)\n",
-    "polyStyle2 = dict(stroke='#e94749', stroke_width=0.005, fill='#e41a1c', fill_opacity=0.75)\n",
-    "lineStyle1 = dict(hwidth=0.02, fill='#984ea3')\n",
-    "lineStyle2 = dict(hwidth=0.02, fill='#4daf4a')\n",
     "\n",
-    "d = draw.Drawing(2.1, 2.1, origin='center')\n",
+    "backcolor = drawSvg.RadialGradient(0,0,1)\n",
+    "backcolor.addStop(0, '#ff9832', opacity=1)\n",
+    "backcolor.addStop(1, '#ff7f00', opacity=1)\n",
+    "\n",
+    "polycolor1 = drawSvg.RadialGradient(0,0,1)\n",
+    "polycolor1.addStop(0, '#2c6493', opacity=1)\n",
+    "polycolor1.addStop(1, '#377eb8', opacity=1)\n",
+    "\n",
+    "polycolor2 = drawSvg.RadialGradient(0,0,1)\n",
+    "polycolor2.addStop(0, '#e41a1c', opacity=0.75)\n",
+    "polycolor2.addStop(1, '#e94749', opacity=0.5)\n",
+    "\n",
+    "backgroundStyle = dict(stroke='#cc6500', stroke_width=0.01, fill=backcolor)\n",
+    "polyStyle1 = dict(stroke='black', stroke_opacity=0.5, stroke_width=0.005,  fill=polycolor1)\n",
+    "polyStyle2 = dict(stroke='black', stroke_opacity=0.5, stroke_width=0.005, fill=polycolor2)\n",
+    "lineStyle1 = dict(hwidth=0.02, fill='#984ea3')\n",
+    "lineStyle2 = dict(hwidth=0.02, fill='yellow')\n",
+    "pointStyle1 = dict(hradius=0.02, fill='#984ea3')\n",
+    "pointStyle2 = dict(hradius=0.02, fill='yellow')\n",
+    "\n",
+    "\n",
+    "d = drawSvg.Drawing(2.1, 2.1, origin='center')\n",
     "d.setRenderSize(500)\n",
-    "d.append(draw.Circle(0, 0, 1, **backgroundStyle))\n",
+    "d.append(drawSvg.Circle(0, 0, 1, **backgroundStyle))\n",
     "\n",
     "PList=randomPoints(3,1)\n",
     "\n",
-    "#PList=[Point(-0.381, -0.06), Point(-0.13, 0.123), Point(-0.182, 0.23)]\n",
+    "#PList = [Point(-0.564, 0.586), Point(0.564, -0.586), Point(0.58, 0.399)]\n",
+    "k = 2\n",
+    "#k=random.randint(0,2)\n",
     "\n",
-    "k=random.randint(0,2)\n",
-    "#k=0\n",
     "print('PList =', PList)\n",
     "print('k =', k)\n",
     "\n",
     "Tri=Triangle.fromVertices(PList)\n",
     "\n",
+    "IdealTri=Tri.surroundingIdealTriangle()\n",
+    "\n",
     "delta = Tri.approx()\n",
-    "delta=0.3\n",
+    "#delta=0.3\n",
     "d.draw(Tri, **polyStyle1)\n",
-    "d.draw(deltaNbh(Tri,delta,k),**polyStyle2)\n",
+    "#d.draw(Tri.neigbourhood(delta, k),**polyStyle2)\n",
+    "d.draw(IdealTri, **polyStyle2)\n",
+    "\n",
+    "for i,v in enumerate(Tri.vertices):\n",
+    "    d.draw(v, radius=0.03, fill='yellow')\n",
+    "    d.draw(drawSvg.Text(str(i),0.05, *v, center=0.7))\n",
     "\n",
     "\n",
+    "for i,v in enumerate(IdealTri.vertices):\n",
+    "    d.draw(v, radius=0.03, fill='lightblue')\n",
+    "    d.draw(drawSvg.Text(str(i),0.05, *v, center=0.7))\n",
+    "'''\n",
     "for i,e in enumerate(Tri.edges):\n",
     "    d.draw(Tri.offsetEdge(i, delta, False), **lineStyle1)\n",
-    "\n",
+    "'''\n",
     "for i,e in enumerate(Tri.edges):\n",
-    "    d.draw(Tri.offsetEdge(i, delta, inner=True), **lineStyle2)\n",
-    "\n",
+    "    d.draw(Tri.offsetEdge(i, 0, inner=True), **lineStyle2)\n",
+    "    d.draw(drawSvg.Text(str(i), 0.05, *e.projShape.midpoint(), center=0.7))\n",
     "\n",
     "if Tri.isCCW():\n",
     "    print('Tri is CCW')\n",
@@ -107,6 +135,68 @@
     "#print(delta)\n",
     "#print(np.log(1+2**0.5))\n",
     "#d.savePng('triangleDeltaNbh.png')\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bd7a25c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backcolor = drawSvg.LinearGradient(0,0,0,10)\n",
+    "backcolor.addStop(0, '#ff9832', opacity=1)\n",
+    "backcolor.addStop(0.2, '#ff7f00', opacity=1)\n",
+    "\n",
+    "polycolor1 = drawSvg.LinearGradient(0,0,0,10)\n",
+    "polycolor1.addStop(0, '#2c6493', opacity=1)\n",
+    "polycolor1.addStop(0.2, '#377eb8', opacity=1)\n",
+    "\n",
+    "polycolor2 = drawSvg.LinearGradient(0,0,0,10)\n",
+    "polycolor2.addStop(0, '#e41a1c', opacity=0.75)\n",
+    "polycolor2.addStop(0.2, '#e94749', opacity=0.5)\n",
+    "\n",
+    "backgroundStyle = dict(stroke='#cc6500', stroke_width=0.01, fill=backcolor)\n",
+    "polyStyle1 = dict(stroke='black', stroke_opacity=0.5, stroke_width=0.005,  fill=polycolor1)\n",
+    "polyStyle2 = dict(stroke='black', stroke_opacity=0.5, stroke_width=0.005, fill=polycolor2)\n",
+    "lineStyle1 = dict(hwidth=0.02, fill='#984ea3')\n",
+    "lineStyle2 = dict(hwidth=0.02, fill='yellow')\n",
+    "\n",
+    "\n",
+    "\n",
+    "halfplane= Transform.diskToHalf()\n",
+    "d = drawSvg.Drawing(9, 5, origin=(-9/2, -0.1))\n",
+    "d.append(drawSvg.Rectangle(-10,0, 20, 10, **backgroundStyle))\n",
+    "d.setRenderSize(w=750)\n",
+    "\n",
+    "\n",
+    "PList=randomPoints(3,2)\n",
+    "#PList=[Ideal.fromDegree(i/3*360) for i in range(2)]\n",
+    "\n",
+    "#PList = [Point(-0.564, 0.586), Point(0.129, -0.654), Point(0.58, 0.399)]\n",
+    "k=2\n",
+    "\n",
+    "print('PList =', PList)\n",
+    "print('k =', k)\n",
+    "\n",
+    "Tri=Triangle.fromVertices(PList)\n",
+    "\n",
+    "delta = Tri.approx()\n",
+    "delta=0.3\n",
+    "d.draw(Tri, transform=halfplane, **polyStyle1)\n",
+    "d.draw(deltaNbh(Tri,delta,k), transform=halfplane, **polyStyle2)\n",
+    "\n",
+    "if Tri.isCCW():\n",
+    "    print('Tri is CCW')\n",
+    "else:\n",
+    "    print('Tri is CW')\n",
+    "\n",
+    "if Tri.isDeltaslim(delta):\n",
+    "    print('Tri is delta-slim for delta =',delta)\n",
+    "else:\n",
+    "    print('Tri is not covered for delta =',delta)\n",
+    "\n",
     "d"
    ]
   }
