reordered a bit of stuff

--- a/examples/widget.ipynb
+++ b/examples/widget.ipynb
@@ -2,14 +2,158 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "388d6c6d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\drawSvg\\raster.py:18: RuntimeWarning: Failed to import CairoSVG. drawSvg will be unable to output PNG or other raster image formats. See https://github.com/cduck/drawSvg#prerequisites for more details.\n",
+      "Original OSError: no library called \"cairo-2\" was found\n",
+      "no library called \"cairo\" was found\n",
+      "no library called \"libcairo-2\" was found\n",
+      "cannot load library 'libcairo.so.2': error 0x7e\n",
+      "cannot load library 'libcairo.2.dylib': error 0x7e\n",
+      "cannot load library 'libcairo-2.dll': error 0x7e\n",
+      "  warnings.warn(msg, RuntimeWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "require.undef('drawingview');\n",
+       "\n",
+       "define('drawingview', ['@jupyter-widgets/base'], function(widgets) {\n",
+       "    var DrawingView = widgets.DOMWidgetView.extend({\n",
+       "        render: function() {\n",
+       "            this.container = document.createElement('a');\n",
+       "            this.image_changed();\n",
+       "            this.container.appendChild(this.svg_view);\n",
+       "            this.el.appendChild(this.container);\n",
+       "            this.model.on('change:_image', this.image_changed, this);\n",
+       "            this.model.on('change:_mousemove_blocked', this.block_changed,\n",
+       "                          this);\n",
+       "            this.model.on('change:frame_delay', this.delay_changed,\n",
+       "                          this);\n",
+       "            this.model.on('change:_frame_blocked', this.delay_changed,\n",
+       "                          this);\n",
+       "            this.model.on('change:disable', this.delay_changed,\n",
+       "                          this);\n",
+       "            this.delay_changed();\n",
+       "        },\n",
+       "        image_changed: function() {\n",
+       "            this.container.innerHTML = this.model.get('_image');\n",
+       "            this.svg_view = this.container.getElementsByTagName('svg')[0];\n",
+       "            this.cursor_point = this.svg_view.createSVGPoint();\n",
+       "            this.register_events();\n",
+       "        },\n",
+       "        last_move: null,\n",
+       "        last_mousemove_blocked: null,\n",
+       "        last_timer: null,\n",
+       "        block_changed: function() {\n",
+       "            var widget = this;\n",
+       "            window.setTimeout(function() {\n",
+       "                if (widget.model.get('_mousemove_blocked')\n",
+       "                        != widget.last_mousemove_blocked && widget.last_move) {\n",
+       "                    widget.send_mouse_event('mousemove', widget.last_move);\n",
+       "                }\n",
+       "            }, 0);\n",
+       "        },\n",
+       "        send_mouse_event: function(name, e) {\n",
+       "            this.last_move = null;\n",
+       "            if (this.model.get('disable')) {\n",
+       "                return;\n",
+       "            }\n",
+       "\n",
+       "            this.cursor_point.x = e.clientX;\n",
+       "            this.cursor_point.y = e.clientY;\n",
+       "            var svg_pt = this.cursor_point.matrixTransform(\n",
+       "                            this.svg_view.getScreenCTM().inverse());\n",
+       "\n",
+       "            this.send({\n",
+       "                name: name,\n",
+       "                x: svg_pt.x,\n",
+       "                y: -svg_pt.y,\n",
+       "                type: e.type,\n",
+       "                button: e.button,\n",
+       "                buttons: e.buttons,\n",
+       "                shiftKey: e.shiftKey,\n",
+       "                altKey: e.altKey,\n",
+       "                ctrlKey: e.ctrlKey,\n",
+       "                metaKey: e.metaKey,\n",
+       "                clientX: e.clientX,\n",
+       "                clientY: e.clientY,\n",
+       "                movementX: e.movementX,\n",
+       "                movementY: e.movementY,\n",
+       "                timeStamp: e.timeStamp,\n",
+       "                targetId: e.target ? e.target.id : null,\n",
+       "                currentTargetId: e.currentTarget ? e.currentTarget.id : null,\n",
+       "                relatedTargetId: e.relatedTarget ? e.relatedTarget.id : null,\n",
+       "            });\n",
+       "        },\n",
+       "        delay_changed: function() {\n",
+       "            var widget = this;\n",
+       "            window.clearTimeout(widget.last_timer);\n",
+       "            if (widget.model.get('disable')) {\n",
+       "                return;\n",
+       "            }\n",
+       "            var delay = widget.model.get('frame_delay');\n",
+       "            if (delay > 0) {\n",
+       "                widget.last_timer = window.setTimeout(function() {\n",
+       "                    widget.send_timed_event('timed');\n",
+       "                }, delay);\n",
+       "            }\n",
+       "        },\n",
+       "        send_timed_event: function(name) {\n",
+       "            if (this.model.get('disable')) {\n",
+       "                return;\n",
+       "            }\n",
+       "\n",
+       "            this.send({\n",
+       "                name: name,\n",
+       "            });\n",
+       "        },\n",
+       "        register_events: function() {\n",
+       "            var widget = this;\n",
+       "            this.svg_view.addEventListener('mousedown', function(e) {\n",
+       "                e.preventDefault();\n",
+       "                widget.send_mouse_event('mousedown', e);\n",
+       "            });\n",
+       "            this.svg_view.addEventListener('mousemove', function(e) {\n",
+       "                e.preventDefault();\n",
+       "                if (widget.model.get('_mousemove_blocked')\n",
+       "                        == widget.last_mousemove_blocked) {\n",
+       "                    widget.last_move = e;\n",
+       "                } else {\n",
+       "                    widget.send_mouse_event('mousemove', e);\n",
+       "                }\n",
+       "            });\n",
+       "            this.svg_view.addEventListener('mouseup', function(e) {\n",
+       "                e.preventDefault();\n",
+       "                widget.send_mouse_event('mouseup', e);\n",
+       "            });\n",
+       "        }\n",
+       "    });\n",
+       "\n",
+       "    return {\n",
+       "        DrawingView: DrawingView\n",
+       "    };\n",
+       "});\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "118935743f684803bbe2338b567b3516",
+       "model_id": "46263884b21c448e93808462d172a863",
        "version_major": 2,
        "version_minor": 0
       },
